--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="auth.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/auth.css">
     <title>Scheduler | Home</title>
 </head>
 <body>
@@ -16,14 +16,14 @@
             <form action="">
                 <input type="text" placeholder="Matric Number"><input type="password" placeholder="Password">
             </form>
-            <p class="right"><a href="/signup">Signup</a>&nbsp; instead</p>
+            <p class="right"><a href="./student_signup.html">Signup</a>&nbsp; instead</p>
         </div>
         <div class="login-form">
             <h3>Staff login</h3>
             <form action="">
                 <input type="text" placeholder="Staff No"><input type="password" placeholder="Password">
             </form>
-            <p class="right"><a href="/signup">Signup</a>&nbsp; instead</p>
+            <p class="right"><a href="./lecturer_signup.html">Signup</a>&nbsp; instead</p>
         </div>
     </div>
 </body>
