--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -29,7 +29,7 @@
                         <span class="time_end">End Time</span>
                         <span class="time_end_val" id="monday_end_time">0:00</span>
                     </p>
-                    <div class="hide monday">
+                    <div class="hide monday w-full flex justify-between" style="display: flex;">
                         <input type="text" class="duration" placeholder="Duration in minutes" id="monday_input">
                         <button class="schedule_btn btn" onclick="reserveAppointment('monday_input', 'monday')">schedule</button>
                     </div>
@@ -44,7 +44,7 @@
                         <span class="time_end">End Time</span>
                         <span class="time_end_val" id="tuesday_end_time">0:00</span>
                     </p>
-                    <div class="hide tuesday">
+                    <div class="hide tuesday w-full flex justify-between" style="display: flex;">
                         <input type="text" class="duration" placeholder="Duration in minutes" id="tuesday_input">
                         <button class="schedule_btn btn" onclick="reserveAppointment('tuesday_input', 'tuesday')"">schedule</button>
                     </div>
@@ -59,7 +59,7 @@
                         <span class="time_end">End Time</span>
                         <span class="time_end_val" id="wednesday_end_time">0:00</span>
                     </p>
-                    <div action="" class="hide wednesday">
+                    <div action="" class="hide wednesday w-full flex justify-between" style="display: flex;">
                         <input type="text" class="duration" placeholder="Duration in minutes" id="wednesday_input">
                         <button class="schedule_btn btn" onclick="reserveAppointment('wednesday_input', 'wednesday')">schedule</button>
                     </div>
@@ -74,7 +74,7 @@
                         <span class="time_end">End Time</span>
                         <span class="time_end_val" id="thursday_end_time">0:00</span>
                     </p>
-                    <div action="" class="hide thursday">
+                    <div action="" class="hide thursday w-full flex justify-between" style="display: flex;">
                         <input type="text" class="duration" placeholder="Duration in minutes" id="thursday_input">
                         <button class="schedule_btn btn" onclick="reserveAppointment('thursday_input', 'thursday')">schedule</button>
                     </div>
@@ -89,7 +89,7 @@
                         <span class="time_end">End Time</span>
                         <span class="time_end_val" id="friday_end_time">0:00</span>
                     </p>
-                    <div class="hide friday">
+                    <div class="hide friday w-full flex justify-between" style="display: flex;">
                         <input type="text" class="duration" placeholder="Duration in minutes" id="friday_input">
                         <button class="schedule_btn btn" onclick="reserveAppointment('friday_input', 'friday')">schedule</button>
                     </div>
