--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -145,7 +145,8 @@
                 day: "wednesday",
                 startTime: "2:00",
                 endTime: "3:00",
-                date: "23-04-2022"
+                date: "23-04-2022",
+                message: "Come along with your printed thesis",
             },
             {
                 day: "thursday",
@@ -158,7 +159,7 @@
         mySchedules.map((scheduleItem) => {
             console.log("my schedules")
             var node = document.createElement('div');
-            node.classList.add("schedule_day", "card")
+            node.classList.add("schedule_day", "card", "accepted")
             var h3 = document.createElement("h3");
             h3.classList.add("day")
             h3.innerText = scheduleItem.day;
@@ -186,7 +187,7 @@
             
             var p2 = document.createElement("p");
             p2.classList.add("end_time", "flex");
-            var p2_end = document.createElement("span")
+            var p2_end = document.createElement("span");
             p2_end.classList.add("time_end");
             p2_end.innerText = "End Time";
             var p2_end_val = document.createElement("span")
@@ -195,6 +196,11 @@
             p2.append(p2_end);
             p2.append(p2_end_val);
             node.append(p2);
+
+            var p3 = document.createElement('p');
+            p3.classList.add("message");
+            p3.innerText = scheduleItem.message || "";
+            node.append(p3);
 
             myScheduleContainer.appendChild(node)
         })
