--- a/lecturer_dashboard.html
+++ b/lecturer_dashboard.html
@@ -14,6 +14,9 @@
     <div class="container">
         <a href="./index.html" style="float: right; margin-top: 1rem;">Logout</a>
         <span>&nbsp;</span>
+        <button id="upload_widget" class="cloudinary-button" style="background: transparent;border: 0; outline:none;">
+            <img src="./images/avatar.jpeg" alt="" id="profileimage">
+        </button>
     </div>
     <div class="container manage_schedule">
         <h1 class="primary">Manage Schedules</h1>
@@ -304,6 +307,8 @@
             document.getElementById('modal').classList.remove('hide');
         }
     </script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+    <script src="./upload_widget.js"></script>
 </body>
 
 </html>
