--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -14,6 +14,10 @@
     <div class="container">
         <a href="./index.html" style="float: right; margin-top: 1rem;">Logout</a>
         <span>&nbsp;</span>
+        <button id="upload_widget" class="cloudinary-button" style="background: transparent;border: 0; outline:none;">
+            <img src="./images/avatar.jpeg" alt="" id="profileimage">
+        </button>
+
     </div>
     <div class="container appointments">
         <div class="appointment">
@@ -105,6 +109,7 @@
     </div>
 
     <script>
+       
         var schedule = [
             {
                 day: "monday",
@@ -205,6 +210,8 @@
             myScheduleContainer.appendChild(node)
         })
     </script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
+    <script src="./upload_widget.js"></script>
 </body>
 
 </html>
